crates/parser/tests/snapshots/test__basic_test_cases-2.snap
---
source: crates/parser/tests/test.rs
expression: "HtmlParser::new(\"<html>\n        <head>\n        </head>\n        <body>\n        </body>\n    </html>\").parse()"

---
{
  "children": [
    {
      "Element": {
        "name": "html",
        "attributes": [],
        "children": [
          {
            "Element": {
              "name": "head",
              "attributes": [],
              "children": []
            }
          },
          {
            "Element": {
              "name": "body",
              "attributes": [],
              "children": []
            }
          }
        ]
      }
    }
  ]
}
