crates/parser/tests/snapshots/test__basic_test_cases-9.snap
---
source: crates/parser/tests/test.rs
expression: "HtmlParser::new(\"<style>.red { background-color: red; }</style>\").parse()"

---
{
  "html": {
    "Element": {
      "name": "fragment",
      "attributes": [],
      "children": []
    }
  },
  "script": [],
  "style": [
    {
      "attributes": [],
      "source": ".red { background-color: red; }"
    }
  ]
}
