crates/parser/tests/snapshots/test__basic_test_cases.snap
---
source: crates/parser/tests/test.rs
expression: "HtmlParser::new(\"<html></html>\").parse()"

---
{
  "children": [
    {
      "Element": {
        "name": "html",
        "attributes": [],
        "children": []
      }
    }
  ]
}
